--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,18 +38,24 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".SignupActivity"
-            android:exported="true"></activity>
+            android:exported="true"
+            />
         <activity
             android:name=".LoginActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".HomeActivity"
-            android:exported="true">
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true"
+            >
+
         </activity>
     </application>
 
